--- a/frontend/src/phase1.css
+++ b/frontend/src/phase1.css
@@ -45,22 +45,36 @@
     cursor: pointer;
     font-size: larger;
 }
-/* .startrec{
-    background-color: lightsteelblue;
+.startrec{
+    padding: 2px 6px;
+      font-size: 16px;
+      cursor: grabbing;
+      text-align: center;
+      margin-left: 4px;
+      margin-top: 10px;
+      display: block;
+    /* background-color: lightsteelblue;
     border: solid 0.5px steelblue;
     padding: 5px;
     font-size: 20px;
-    cursor: pointer;
-    float: left;
+    cursor: pointer;*/
+    float: left; 
 }
 .stoprec{
-    cursor: pointer;
+    padding: 2px 6px;
+      font-size: 16px;
+      cursor: grabbing;
+      text-align: center;
+      margin-left: 4px;
+      margin-top: 10px;
+      display: block;
+    /* cursor: pointer;
     background-color: lightsteelblue;
     border: solid 0.5px steelblue;
     padding: 5px;
-    font-size: 20px;
-    float: right;
-} */
+    font-size: 20px;*/
+    float: right; 
+}
 .facescore{
     width: 100%;
     height: 300px;
@@ -104,8 +118,8 @@
     background-color: lavender;
     padding: 10px;
     width: 96%;
-    height: 100%;
-position:relative;
+    height: 97%;
+    position:relative;
 }
 .card-title{
     color: darkblue;
